office fabric styles are overriding my styles in production but not locally. Wrap the overlay in a div with a class to give increased specificity to the rules in my css and avoid using 'important' or double-class specificity hacks

--- a/src/components/loading-overlay/index.css
+++ b/src/components/loading-overlay/index.css
@@ -1,4 +1,4 @@
-.loading-overlay_overlay {
+.loading-overlay_container .loading-overlay_overlay {
     height: 100%;
     position: fixed;
     top: 0;
